--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <title>Music Fiesta</title>
+    <title>music fiesta</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
